--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,10 +2,10 @@
   "primeng": {
     "today": "Aujourd'hui",
     "clear": "Réinitialiser",
-    "weakLabel": "Faible",
-    "mediumLabel": "Moyen",
-    "strongLabel": "Fort",
-    "promptLabel": "Saisir un mot de passe",
+    "weak": "Faible",
+    "medium": "Moyen",
+    "strong": "Fort",
+    "passwordPrompt": "Saisir un mot de passe",
     "dayNamesMin": [
       "Di",
       "Lu",
@@ -14,6 +14,15 @@
       "Je",
       "Ve",
       "Sa"
+    ],
+    "dayNames": [
+      "Dimanche",
+      "Lundi",
+      "Mardi",
+      "Mercredi",
+      "Jeudi",
+      "Vendredi",
+      "Samedi"
     ],
     "monthNames": [
       "Janvier",
